fix(animation): overflowing background element

--- a/components/block/animation/animation.module.scss
+++ b/components/block/animation/animation.module.scss
@@ -1,5 +1,5 @@
 .animation {
-	@apply snap-start relative;
+	@apply snap-start relative overflow-x-clip;
 }
 
 .content {
